
from LogisticsDispatch.Infrastructure.Repositories.repository_base import InMemoryRepository
from LogisticsDispatch.Domain.Entities.client import Client
from LogisticsDispatch.Domain.Entities.vehicle_base import VehicleBase
from LogisticsDispatch.Domain.Entities.driver import Driver
from LogisticsDispatch.Domain.Entities.shipment import Shipment
from LogisticsDispatch.Domain.Entities.invoice import Invoice
from LogisticsDispatch.Domain.Entities.payment import Payment

class ClientRepository(InMemoryRepository[Client]): ...
class VehicleRepository(InMemoryRepository[VehicleBase]): ...
class DriverRepository(InMemoryRepository[Driver]): ...
class ShipmentRepository(InMemoryRepository[Shipment]): ...
class InvoiceRepository(InMemoryRepository[Invoice]): ...
class PaymentRepository(InMemoryRepository[Payment]): ...
